Resources/clean_c_files_rte/c_files_acsl_by_rte/output_altergo_tests/output_func1_4_altergo.txt
[kernel] Parsing func1_4_rte.c (with preprocessing)
[kernel] func1_4_rte.c:1: 
  syntax error:
  Location: line 1, column 1, before or at token: [
  1     [kernel] Warning: no input file.
        ^
  2     [kernel] Parsing func1_4.c (with preprocessing)
  3     [kernel] func1_4.c:2: User Error:
[kernel] Frama-C aborted: invalid user input.
